# Phoenix-Chess-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  move.h  position.cpp  position.h  tempCodeRunnerFile.cpp  testing.cpp
.circleci/: config.yml
.github/workflows/: ci.yml  cmake.yml
include/: board.h  engine.h  move.h  moveManager.h  utils.h
lib/: CMakeLists.txt  board.cpp  board.h  engine.h  pieces.cpp  pieces.h  utils.h
src/: CMakeLists.txt  board.cpp  engine.cpp  engine.h  main.cpp  move.cpp  move.h  moveManager.cpp  position.cpp  position.h  start.cpp  testing.cpp  thc.cpp  thc.h  uils.h
src/position/: position.cpp  position.h
src/position/board/: board.cpp  board.h
src/position/pieces/: pieces.cpp  pieces.h
test/: CMakeLists.txt  main.cpp  test_board.cpp
